--- a/styles/styles.css
+++ b/styles/styles.css
@@ -108,7 +108,7 @@ body {
     position: relative;
 
     width: 100%;
-    height: 60px;
+    height: 80px;
 
     background: rgba(0 0 0 / 0.5);
     border-radius: 10px;
@@ -364,7 +364,7 @@ svg {
     display: flex;
     flex-direction: column;
 
-    transition: cubic-bezier(0, 0.4, 0, 1) 500ms;
+    /* transition: cubic-bezier(0, 0.4, 0, 1) 500ms; */
 }
 
 .contentWrapper:has(.slideOutAnim) #playerWrapper {
@@ -397,7 +397,7 @@ canvas {
     /* transform: scaleY(-1); */
     /* z-index: 0; */
     /* background-color: rgba(255, 255, 255, 0.1); */
-    /* transition: cubic-bezier(0, 0.4, 0, 1) 200ms; */
+    transition: cubic-bezier(0, 0.4, 0, 1) 200ms;
     transform-origin: top left;
 }
 
@@ -422,6 +422,7 @@ canvas {
     background-position: center;
 
     /* transition: ease-in-out 200ms; */
+    /* transition: cubic-bezier(0, 0.4, 0, 1) 500ms; */
 }
 
 #metadata {
@@ -816,7 +817,7 @@ canvas {
 }
 
 .multiplier {
-    background-color: rgb(137, 240, 163);
+    background-color: #89f0a3;
     padding: 2px 10px;
     color: var(--primary-1);
     border-radius: 20px;
