--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -22,16 +22,17 @@
     }
 
     .timelineContainer {
-        height: 50px;
+        height: 60px;
         width: calc(100% - 20px);
         margin-inline: 10px;
     }
 
     .zoom {
         padding: 0;
-        justify-content: center;
+        justify-content: space-around;
 
-        display: none;
+        /* display: none; */
+        width: 20px;
     }
 
     .zoom img {
