--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -180,6 +180,11 @@
 
         margin-bottom: 20px;
         justify-content: center;
+        font-size: 16px;
+    }
+
+    .digit {
+        width: 9px;
     }
 
     .timingContainer {
