--- a/styles/styles.css
+++ b/styles/styles.css
@@ -297,6 +297,19 @@ svg {
 #map-dropper::-webkit-file-upload-button {
     visibility: hidden;
 }
+#map-dropper::file-selector-button {
+    background-image: url(/static/upload.png);
+    background-repeat: no-repeat;
+    background-position: center center;
+
+    color: transparent;
+    background-color: transparent;
+
+    width: 100%;
+    height: 100%;
+
+    border: none;
+}
 #map-dropper::before {
     content: "";
     position: absolute;
@@ -1210,6 +1223,7 @@ button:hover {
 
     margin: 0;
     width: 100%;
+    height: 50px;
 
     /* padding-right: 20px; */
 
@@ -1224,6 +1238,16 @@ button:hover {
 
     margin: 20px 0;
     border-radius: 20px;
+}
+
+.slider input::-moz-range-track {
+    background: var(--accent-1);
+    height: 4px;
+
+    margin: 20px 0;
+    border-radius: 20px;
+
+    margin: 10px 0;
 }
 
 .slider input::-webkit-slider-thumb {
@@ -1243,12 +1267,40 @@ button:hover {
     outline: solid 3px var(--accent-1);
 }
 
+.slider input::-moz-range-thumb {
+    appearance: none;
+
+    width: 40px;
+    height: 10px;
+
+    background: var(--primary-4);
+    border-radius: 20px;
+
+    margin-top: -3px;
+
+    transition: cubic-bezier(0.03, 0.16, 0.29, 1.45) 150ms;
+    transform-origin: center;
+
+    outline: solid 3px var(--accent-1);
+    border: none;
+}
+
 .slider input::-webkit-slider-thumb:hover {
     box-shadow: 0 0 10px 0px var(--accent-1);
     filter: brightness(2);
 }
 
+.slider input::-moz-range-thumb:hover {
+    box-shadow: 0 0 10px 0px var(--accent-1);
+    filter: brightness(2);
+}
+
 .slider input::-webkit-slider-thumb:active {
+    background: var(--accent-1);
+    width: 50px;
+}
+
+.slider input::-moz-range-thumb:active {
     background: var(--accent-1);
     width: 50px;
 }
