--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -77,6 +77,13 @@
         height: 30px;
     }
 
+    .mapBG {   
+        width: 100% !important;
+        height: calc(100vw * 3 / 4);
+    
+        border-radius: 0;
+    }
+
     .contentWrapper {
         /* display: unset; */
         /* gap: 0; */
