--- a/styles/styles.css
+++ b/styles/styles.css
@@ -298,7 +298,7 @@ svg {
     visibility: hidden;
 }
 #map-dropper::file-selector-button {
-    background-image: url(/static/upload.png);
+    background-image: url(/static/upload.svg);
     background-repeat: no-repeat;
     background-position: center center;
 
@@ -316,11 +316,11 @@ svg {
     width: 100%;
     height: 100%;
 
-    background-image: url(/static/upload.png);
+    background-image: url(/static/upload.svg);
     background-repeat: no-repeat;
     background-position: center center;
 
-    padding: 5px;
+    padding: 10px;
     user-select: none;
     cursor: pointer;
 
