feat(background): Move background from HTML to Canvas

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -378,6 +378,8 @@ svg {
     transition: cubic-bezier(0, 0.4, 0, 1) 200ms;
 
     border-radius: 10px 10px 0 0;
+
+    opacity: 0;
 }
 
 .contentWrapper {
