--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1559,15 +1559,24 @@ a:visited {
     position: absolute;
     width: 100%;
 
-    bottom: 120px;
+    left: 20px;
+    bottom: 80px;
 
     z-index: 1;
+
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: start;
+    gap: 10px;
+
+    padding: 10px;
 }
 
 .noti {
-    position: absolute;
+    /* position: absolute;
     inset: 0;
-    margin: auto;
+    margin: auto; */
+    width: 400px;
 
     background-color: var(--primary-1);
     border: none;
@@ -1583,6 +1592,8 @@ a:visited {
     gap: 20px;
 
     font-weight: 400;
+
+    padding: 20px;
 }
 
 .noti.warning {
