--- a/styles/styles.css
+++ b/styles/styles.css
@@ -49,7 +49,7 @@ body {
     width: 100vw;
     min-height: 100dvh;
     box-sizing: border-box;
-    padding: 20px;
+    padding: 10px;
     margin: 0;
     overflow: hidden;
     /* background-image: url(../higuchimadoka.jpg); */
@@ -71,7 +71,8 @@ body {
     box-sizing: border-box;
 }
 
-#main {
+.placeholder {
+    position: absolute;
     opacity: 0;
     font-family: Nicolatte;
 }
@@ -103,7 +104,7 @@ body {
 
     /* transform: scaleY(-1);   */
 
-    background-color: rgb(0 0 0 /0.5);
+    background-color: rgb(0 0 0 /0.7);
     /* z-index: -1; */
 
     backdrop-filter: blur(5px);
@@ -191,7 +192,12 @@ body {
     position: relative;
     /* width: 300px; */
     flex: 1;
-    height: 40px;
+
+    display: flex;
+
+    padding: 15px;
+    background-color: rgba(0 0 0 /0.5);
+    border-radius: 10px;
 }
 
 #inputContainer input[type="text"] {
@@ -199,55 +205,33 @@ body {
     box-sizing: border-box;
 
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
 
-    padding: 20px;
+    /* height: 40px; */
 
     font-family: Torus;
     color: white;
 
     border: none;
-    background-color: rgba(0 0 0 /0.5);
-    border-radius: 10px;
-    outline: solid 2px var(--accent-1);
-}
-
-#inputWrapper::before {
-    content: "enter beatmap id or url (not beatmapset)";
-    position: absolute;
-
-    left: 10px;
-
-    font-weight: 500;
-    font-size: 0.7rem;
-
-    /* height: 10px; */
-    color: var(--text-1);
-
-    padding: 2px 10px;
-
-    transition: ease-in-out 200ms;
-    pointer-events: none;
-
-    border-radius: 5px;
-}
-
-#inputWrapper:has(input[type="text"]:placeholder-shown)::before {
-    top: 12px;
-    font-size: 0.7rem;
-}
-
-#inputWrapper:has(input[type="text"]:not(:placeholder-shown))::before,
-#inputWrapper:has(input[type="text"]:focus)::before {
-    top: -10px;
-    font-size: 0.6rem;
-    background-color: var(--primary-1);
-
+    background: transparent
     /* outline: solid 2px var(--accent-1); */
 }
 
 #inputContainer input[type="text"]:focus {
+    outline: none;
+}
+
+#inputWrapper:has(input[type="text"]:focus) {
     outline: solid 3px var(--accent-1);
+}
+
+#submit {
+    background-image: url(/static/search.png);
+    background-size: cover;
+    background-position: center;
+
+    width: 20px;
+    height: 20px;
 }
 
 #inputContainer button:nth-child(3),
@@ -255,7 +239,7 @@ body {
     width: 80px;
     height: 40px;
 
-    background-color: var(--primary-3);
+    /* background-color: var(--primary-3); */
 
     font-family: Torus;
     font-weight: 500;
@@ -273,16 +257,31 @@ body {
 
 #settingsButton {
     position: relative;
-    width: 40px;
-    height: 40px;
+    width: 80px;
+    height: 50px;
     margin-right: auto;
 
-    background-image: url(/static/settings.png);
-    background-size: 90%;
+    /* background-image: url(/static/settings.png);
+    background-size: contain;
     background-position: center;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat; */
 
-    transition: ease-in-out 50ms;
+    transition: ease-in-out 100ms;
+
+    padding: 10px;
+
+    border-radius: 10px;
+}
+
+#settingsButton img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+#settingsButton:hover {
+    filter: none;
+    background-color: rgba(255 255 255 /.1);
 }
 
 svg {
@@ -298,12 +297,12 @@ svg {
     position: relative;
     color: transparent;
     aspect-ratio: 1 / 1;
-    width: 40px;
-    height: 40px;
+    width: 80px;
+    height: 50px;
     border-radius: 10px;
 
     transition: ease-in-out 200ms;
-    background-color: var(--primary-3);
+    /* background-color: var(--primary-3); */
 }
 #map-dropper::-webkit-file-upload-button {
     visibility: hidden;
@@ -338,7 +337,8 @@ svg {
     box-sizing: border-box;
 }
 #map-dropper:hover {
-    background-color: var(--primary-5);
+    /* background-color: var(--primary-5); */
+    background-color: rgba(255 255 255 /.1);
 }
 #map-dropper:active {
     outline: 0;
@@ -346,9 +346,9 @@ svg {
 
 #choose-diff {
     /* width: 80px; */
-    height: 40px;
+    height: 50px;
 
-    background-color: var(--primary-3);
+    /* background-color: var(--primary-3); */
 
     font-family: Torus;
     font-weight: 500;
@@ -362,7 +362,8 @@ svg {
 
 #choose-diff:hover {
     filter: none;
-    background-color: var(--primary-5);
+    /* background-color: var(--primary-5); */
+    background-color: rgba(255 255 255 /.1);
 }
 
 #choose-diff:disabled {
@@ -391,6 +392,10 @@ svg {
     position: relative;
     width: 100%;
     flex: 1;
+
+    border-radius: 10px;
+
+    overflow: hidden;
 }
 
 canvas {
@@ -1085,12 +1090,18 @@ button:hover {
 
     padding: 40px;
     background-color: var(--primary-3);
-    font-weight: 400;
+    font-weight: 300;
+
+    display: flex;
+    flex-direction: column;
+
+    gap: 5px;
+    font-size: 0.9em;
 }
 
 .header {
-    font-size: 3em;
-    font-weight: 600;
+    font-size: 2em;
+    font-weight: 400;
 }
 
 .description {
@@ -1098,8 +1109,8 @@ button:hover {
 }
 
 .title {
-    font-size: 2em;
-    font-weight: 600;
+    font-size: 1.2em;
+    font-weight: 400;
 }
 
 .list {
@@ -1163,46 +1174,46 @@ button:hover {
 .slider input::-webkit-slider-thumb {
     appearance: none;
 
-    width: 40px;
-    height: 10px;
+    width: 50px;
+    height: 16px;
 
-    background: var(--primary-3);
+    background: var(--accent-1);
     border-radius: 20px;
 
-    margin-top: -3px;
+    margin-top: -6px;
 
     transition: cubic-bezier(0.03, 0.16, 0.29, 1.45) 150ms;
     transform-origin: center;
 
-    outline: solid 3px var(--accent-1);
+    /* border: solid 3px var(--accent-1); */
 }
 
 .slider input::-moz-range-thumb {
     appearance: none;
 
-    width: 40px;
-    height: 10px;
+    width: 46px;
+    height: 16px;
 
-    background: var(--primary-4);
+    background: var(--accent-1);
     border-radius: 20px;
 
-    margin-top: -3px;
+    margin-top: -6px;
 
     transition: cubic-bezier(0.03, 0.16, 0.29, 1.45) 150ms;
     transform-origin: center;
 
-    outline: solid 3px var(--accent-1);
+    /* outline: solid 3px var(--accent-1); */
     border: none;
 }
 
 .slider input::-webkit-slider-thumb:hover {
     box-shadow: 0 0 10px 0px var(--accent-1);
-    filter: brightness(2);
+    filter: brightness(1.2);
 }
 
 .slider input::-moz-range-thumb:hover {
     box-shadow: 0 0 10px 0px var(--accent-1);
-    filter: brightness(2);
+    filter: brightness(1.2);
 }
 
 .slider input::-webkit-slider-thumb:active {
@@ -1328,7 +1339,7 @@ input[type="checkbox"]:disabled:hover {
     gap: 20px;
     padding: 5px 0;
     opacity: 0.5;
-    font-weight: 400;
+    font-weight: 300;
     transition: ease-in-out 100ms;
 }
 
@@ -1349,6 +1360,9 @@ input[type="checkbox"]:disabled:hover {
 
 #custom-mirror {
     width: 100%;
+    padding: 20px;
+    border-radius: 10px;
+    font-size: 0.8rem;
 }
 
 .radioSel input[type="radio"] {
@@ -1440,7 +1454,7 @@ a:visited {
     text-align: center;
 }
 
-.skinSelector {
+.skinSelector, .rendererSelector {
     border: none;
     outline: none;
 
@@ -1457,12 +1471,12 @@ a:visited {
     background-color: var(--primary-2);
 }
 
-.skinSelector:hover {
+.skinSelector:hover, .rendererSelector:hover {
     filter: none;
     background-color: var(--primary-5);
 }
 
-#skinDropdown {
+#skinDropdown, #rendererDropdown {
     position: absolute;
     top: 100%;
     margin: unset;
@@ -1485,13 +1499,13 @@ a:visited {
     flex-direction: column;
 }
 
-.skinSelection {
+.skinSelection, .rendererSelection {
     display: flex;
     align-items: center;
     gap: 10px;
 }
 
-.skinName {
+.skinName, .renderer {
     flex: 1;
     padding: 10px;
     border-radius: 5px;
@@ -1503,7 +1517,7 @@ a:visited {
     font-size: 0.8rem;
 }
 
-.skinName:hover {
+.skinName:hover, .renderer:hover {
     background-color: var(--primary-3);
     filter: none;
 }
