--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,48 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 @import "tailwindcss";
+
+:root {
+	font-family: Rubik, system-ui, Avenir, Helvetica, Arial, sans-serif;
+	line-height: 1.5;
+	font-weight: 400;
+
+	color-scheme: light dark;
+	color: rgba(255, 255, 255, 0.87);
+	background-color: #242424;
+
+	font-synthesis: none;
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+html {
+	width: 100vw;
+	height: 100vh;
+}
+
+body {
+	margin: 0;
+	min-width: 100vw;
+	min-height: 100vh;
+
+	width: 100%;
+	height: 100%;
+
+	padding: 20px;
+
+	display: flex;
+    flex-direction: column;
+    gap: 10px;
+
+	overflow: hidden;
+
+	background-image: linear-gradient(
+			to top,
+			rgba(0 0 0 / 0.5),
+			rgba(0 0 0 / 0.5)
+		), url("/anon.jpg");
+
+	background-position: center;
+	background-size: cover;
+}
