--- a/src/style.css
+++ b/src/style.css
@@ -18,13 +18,13 @@
 
 html {
 	width: 100vw;
-	height: 100vh;
+	height: 100svh;
 }
 
 body {
 	margin: 0;
 	min-width: 100vw;
-	min-height: 100vh;
+	min-height: 100svh;
 
 	width: 100%;
 	height: 100%;
@@ -45,4 +45,10 @@ body {
 
 	background-position: center;
 	background-size: cover;
+}
+
+@media screen and (max-aspect-ratio: 1 / 1) {
+	body {
+		padding: 0px;
+	}
 }
