feat: use image from CDN

--- a/src/style.css
+++ b/src/style.css
@@ -63,7 +63,7 @@ body {
 
 	overflow: hidden;
 
-	background-image: url("/anon.jpg");
+	background-image: url("https://fukutotojido.s-ul.eu/9WppjJGO");
 
 	background-position: center;
 	background-size: cover;
