--- a/src/style.css
+++ b/src/style.css
@@ -69,6 +69,49 @@ body {
 	background-size: cover;
 }
 
+@keyframes show {
+	from {
+		display: none;
+		opacity: 0;
+	}
+	to {
+		display: block;
+		opacity: 1;
+	}
+}
+
+@keyframes hide {
+	from {
+		display: block;
+		opacity: 1;
+	}
+	to {
+		display: none;
+		opacity: 0;
+	}
+}
+
+.overlay {
+	display: block;
+	opacity: 1;
+	animation: ease-in-out 200ms show forwards;
+}
+
+.overlayHidden {
+	display: none;
+	opacity: 0;
+	animation: ease-in-out 200ms hide forwards;
+}
+
+#settings {
+	transition: cubic-bezier(0, 0.4, 0, 1.0) 200ms;
+	left: -700px;
+}
+
+#settings.show {
+	left: 0;
+}
+
 @media screen and (max-aspect-ratio: 1 / 1) {
 	body {
 		padding: 0px;
@@ -142,4 +185,111 @@ body {
 		box-shadow: 0 0 0 1rem #fff;
 		opacity: 1;
 	}
+}
+
+input[type="range"] {
+	margin: 0;
+	width: 100%;
+	height: 20px;
+
+	appearance: none;
+	background: transparent;
+	cursor: pointer;
+}
+
+input[type="range"]::-webkit-slider-runnable-track {
+	background: var(--color-overlay-2);
+	height: 4px;
+
+	margin: 20px 0;
+	border-radius: 20px;
+}
+
+input[type="range"]::-moz-range-track {
+	background: var(--color-overlay-2);
+	height: 4px;
+
+	margin: 20px 0;
+	border-radius: 20px;
+
+	margin: 10px 0;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+	appearance: none;
+
+	width: 50px;
+	height: 16px;
+
+	background: var(--color-overlay-2);
+	border-radius: 20px;
+
+	margin-top: -6px;
+
+	transition: cubic-bezier(0.03, 0.16, 0.29, 1.45) 150ms;
+	transform-origin: center;
+}
+
+input[type="range"]::-moz-range-thumb {
+	appearance: none;
+
+	width: 46px;
+	height: 16px;
+
+	background: var(--color-overlay-2);
+	border-radius: 20px;
+
+	margin-top: -6px;
+
+	transition: cubic-bezier(0.03, 0.16, 0.29, 1.45) 150ms;
+	transform-origin: center;
+
+	border: none;
+}
+
+input[type="range"]::-webkit-slider-thumb:hover {
+	box-shadow: 0 0 10px 0px var(--color-overlay-2);
+	filter: brightness(1.2);
+}
+
+input[type="range"]::-moz-range-thumb:hover {
+	box-shadow: 0 0 10px 0px var(--color-overlay-2);
+	filter: brightness(1.2);
+}
+
+input[type="range"]::-webkit-slider-thumb:active {
+	background: var(--color-overlay-2);
+	width: 50px;
+}
+
+input[type="range"]::-moz-range-thumb:active {
+	background: var(--color-overlay-2);
+	width: 50px;
+}
+
+input[type="checkbox"] {
+	appearance: none;
+	width: 40px;
+	height: 10px;
+
+	outline: solid 3px var(--color-overlay-2);
+	border-radius: 25px;
+
+	transition: cubic-bezier(0.03, 0.16, 0.29, 1.45) 100ms;
+	cursor: pointer;
+}
+
+input[type="checkbox"]:hover {
+	box-shadow: 0 0 5px 2px var(--color-overlay-2);
+	filter: brightness(1.5);
+}
+
+input[type="checkbox"]:checked {
+	width: 50px;
+	background-color: var(--color-overlay-2);
+}
+
+input[type="checkbox"]:disabled:hover {
+	box-shadow: unset;
+	filter: unset;
 }
