--- a/src/style.css
+++ b/src/style.css
@@ -55,6 +55,18 @@ body {
 	width: 100%;
 	height: 100%;
 
+	background-image: url("https://fukutotojido.s-ul.eu/9WppjJGO");
+
+	background-position: center;
+	background-size: cover;
+
+	overflow: hidden;
+}
+
+main {
+	width: 100%;
+	height: 100%;
+
 	padding: 20px;
 
 	display: flex;
@@ -63,10 +75,7 @@ body {
 
 	overflow: hidden;
 
-	background-image: url("https://fukutotojido.s-ul.eu/9WppjJGO");
-
-	background-position: center;
-	background-size: cover;
+	transition: cubic-bezier(0, 0.4, 0, 1.0) 200ms;
 }
 
 @keyframes show {
@@ -112,8 +121,12 @@ body {
 	left: 0;
 }
 
+main:has(.overlay) {
+	transform: translateX(40px);
+}
+
 @media screen and (max-aspect-ratio: 1 / 1) {
-	body {
+	main {
 		padding: 0px;
 	}
 
