--- a/src/app/style.css
+++ b/src/app/style.css
@@ -75,7 +75,7 @@ main {
 
 	overflow: hidden;
 
-	transition: transform cubic-bezier(0, 0.4, 0, 1) 200ms;
+	transition: cubic-bezier(0, 0.4, 0, 1) 200ms;
 }
 
 @keyframes show {
