--- a/styles/styles.css
+++ b/styles/styles.css
@@ -248,7 +248,7 @@ body:has(.opened) {
 }
 
 #submit {
-    background-image: url(/static/search.png);
+    background-image: url(./static/search.png);
     background-size: cover;
     background-position: center;
 
@@ -330,7 +330,7 @@ svg {
     visibility: hidden;
 }
 #map-dropper::file-selector-button {
-    background-image: url(/static/upload.svg);
+    background-image: url(./static/upload.svg);
     background-repeat: no-repeat;
     background-position: center center;
 
@@ -348,7 +348,7 @@ svg {
     width: 100%;
     height: 100%;
 
-    background-image: url(/static/upload.svg);
+    background-image: url(./static/upload.svg);
     background-repeat: no-repeat;
     background-position: center center;
 
@@ -687,7 +687,7 @@ canvas {
     padding: 0;
     margin: 20px 20px;
 
-    background-image: url(/static/play.png);
+    background-image: url(./static/play.png);
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
@@ -699,7 +699,7 @@ canvas {
     padding: 0;
     margin: 20px 20px;
 
-    background-image: url(/static/prev.png);
+    background-image: url(./static/prev.png);
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
@@ -711,7 +711,7 @@ canvas {
     padding: 0;
     margin: 20px 20px;
 
-    background-image: url(/static/next.png);
+    background-image: url(./static/next.png);
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
