--- a/src/app/style.css
+++ b/src/app/style.css
@@ -302,6 +302,10 @@ body.fullscreen {
 	box-shadow: 0 0 0 0 #fff;
 }
 
+canvas {
+	touch-action: auto;
+}
+
 @keyframes pulsIn {
 	0% {
 		box-shadow: inset 0 0 0 1rem #fff;
