--- a/src/app/style.css
+++ b/src/app/style.css
@@ -44,13 +44,13 @@
 
 html {
 	width: 100vw;
-	height: 100svh;
+	height: 100dvh;
 }
 
 body {
 	margin: 0;
 	min-width: 100vw;
-	min-height: 100svh;
+	min-height: 100dvh;
 
 	width: 100%;
 	height: 100%;
