--- a/src/app/style.css
+++ b/src/app/style.css
@@ -506,3 +506,61 @@ input[type="radio"]:checked::before {
 	width: 100%;
 	height: 100%;
 }
+
+@keyframes showSplash {
+	from {
+		display: none;
+		opacity: 0;
+	}
+	to {
+		display: flex;
+		opacity: 1;
+	}
+}
+
+@keyframes hideSplash {
+	from {
+		display: flex;
+		opacity: 1;
+	}
+	to {
+		display: none;
+		opacity: 0;
+	}
+}
+
+.showSplash {
+	animation: ease-in-out 200ms showSplash forwards;
+}
+
+.hideSplash {
+	animation: ease-in-out 200ms hideSplash forwards;
+}
+
+@keyframes showContainer {
+	from {
+		transform: scale(0.9);
+	}
+	to {
+		transform: none;
+	}
+}
+
+@keyframes hideContainer {
+	from {
+		display: flex;
+		opacity: 1;
+	}
+	to {
+		display: none;
+		opacity: 0;
+	}
+}
+
+.showContainer {
+	animation: ease-in-out 500ms showContainer forwards;
+}
+
+.hideContainer {
+	animation: ease-in-out 500ms hideContainer forwards;
+}
