fix: diff container unscrollable

--- a/src/app/style.css
+++ b/src/app/style.css
@@ -140,7 +140,12 @@ main {
 
 .flyout {
 	interpolate-size: allow-keywords;
-	overflow: hidden;
+	
+	&::-webkit-scrollbar {
+	    display: none
+	}
+	
+	scrollbar-width: none;
 }
 
 .overlay {
